--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -235,7 +235,7 @@ jobs:
       - name: Create release
         uses: ncipollo/release-action@v1
         with:
-          name: Reflect ${VERSION}
+          name: Reflect ${{ VERSION }}
           tag: ${{ github.ref_name }}
           artifacts: "artifacts/*"
           draft: true
